--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -39,6 +39,12 @@ players:
   1b0903a4-9317-478b-9a47-f33bd66f20b7:
     party: flash
     rank: 20
+  e6de8cf0-af45-44e4-882f-d98446f4b31b:
+    party: Fam
+    rank: 20
+  f621586e-8ef8-448d-9264-86b61375052e:
+    party: Fam
+    rank: 5
 parties:
   anti:
     leader: 34a87619-4b40-4ae8-b759-3efa25bbbffd
@@ -77,3 +83,8 @@ parties:
     leader: 1b0903a4-9317-478b-9a47-f33bd66f20b7
     members:
     - 1b0903a4-9317-478b-9a47-f33bd66f20b7
+  Fam:
+    leader: e6de8cf0-af45-44e4-882f-d98446f4b31b
+    members:
+    - e6de8cf0-af45-44e4-882f-d98446f4b31b
+    - f621586e-8ef8-448d-9264-86b61375052e
