--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3570,7 +3570,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&4Fl&ea&4sh'
+      prefix: RedSkies_
     worlds:
       survival:
         permissions:
@@ -7826,6 +7826,7 @@ groups:
     worlds:
       policeoffice:
         permissions:
+        - essentials.build.*
         - -essentials.build.interact.147:*
         - -essentials.build.interact.147
         - essentials.build.interact.70
@@ -11167,6 +11168,45 @@ groups:
         - ch.alias.run2
         - ch.alias.run1
         - ch.alias.run0
+  fanfice6de8cf0af4544e4882fd98446f4b31b:
+    inheritance:
+    - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.fanficchatcolor
+        - ch.alias.fanficname
+        - ch.alias.fanficlaser
+        - ch.alias.jump2
+        - ch.alias.jump1
+        - ch.alias.jump0
+        - ch.alias.haste2
+        - ch.alias.haste1
+        - ch.alias.haste0
+        - ch.alias.run2
+        - ch.alias.run1
+        - ch.alias.run0
+    options:
+      prefix: '&5Queen&dOf&cThe&bServer'
+      suffix: '&d'
+  fanfic748c7d6879e541949bc8e446d948ee8a:
+    inheritance:
+    - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.fanficchatcolor
+        - ch.alias.fanficname
+        - ch.alias.fanficlaser
+        - ch.alias.jump2
+        - ch.alias.jump1
+        - ch.alias.jump0
+        - ch.alias.haste2
+        - ch.alias.haste1
+        - ch.alias.haste0
+        - ch.alias.run2
+        - ch.alias.run1
+        - ch.alias.run0
 schema-version: 1
 users:
   001b0b15-2f00-4ce1-acff-577e465cb175:
@@ -11394,7 +11434,7 @@ users:
     permissions: []
   04c0eb6c-bfc8-4925-b12d-c7940a44f274:
     group:
-    - superman
+    - mortal
     options:
       name: EobardZThawne
     worlds:
@@ -11631,7 +11671,7 @@ users:
       name: TheDarkSword1
   0a5357e9-2f1e-4fc6-87cc-dc03d592bd20:
     group:
-    - beastboy
+    - lasher
     options:
       name: adrie_le_zarbi
     permissions:
@@ -11764,10 +11804,13 @@ users:
       name: mobeen_21
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
     group:
-    - flashwallywest
+    - boros
     options:
       name: Miner_Myles
     permissions: []
+    worlds:
+      greenfield:
+        permissions: []
   0e95b8ee-f097-44a9-9e2b-d65cbce898ad:
     group:
     - spidermanpeterparker
@@ -12517,7 +12560,7 @@ users:
       name: Chetica
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group:
-    - jinx
+    - martianmanhunter
     options:
       name: Potterkid
     permissions:
@@ -12739,7 +12782,7 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - raven
+    - missmartian
     options:
       name: X_FoodMeatHark_X
     permissions:
@@ -13382,7 +13425,7 @@ users:
       name: daxakapewbropie
   3be4c2e1-b94f-4644-be50-6b06448019fd:
     group:
-    - batman
+    - starlord
     options:
       name: B1LLYJ0EFRACTURE
     permissions: []
@@ -13509,7 +13552,7 @@ users:
       name: Ice3741
   3ef45cda-e3aa-48a7-9dfa-1e80f21944b1:
     group:
-    - groot
+    - flashwallywest
     options:
       name: Music563
   3f37bdf9-cd54-498a-96b9-16729ac541bc:
@@ -13848,7 +13891,7 @@ users:
       name: Blaziken1234567
   474707f7-f8b4-43ea-8978-9cae17917e82:
     group:
-    - groot
+    - beerus
     options:
       name: ThatCraftLife
     permissions:
@@ -14719,12 +14762,13 @@ users:
         permissions: []
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group:
-    - kidflashwallywest
+    - flashbarryallen
     options:
       name: SanctumGaming
     worlds:
       greenfield:
         permissions: []
+    permissions: []
   60e09b60-d7d2-4c40-a8b8-63824e3b43b5:
     group:
     - hulk
@@ -15464,12 +15508,16 @@ users:
     options:
       name: alex363
     permissions: []
+    worlds:
+      greenfield:
+        permissions: []
   749cb576-020a-4350-852c-99e8185874f9:
     group:
     - blackracerwilliewalker
     options:
       name: dibs1205
     permissions:
+    - is.married
     - chat.cooldown
     worlds:
       fightclub:
@@ -15741,7 +15789,7 @@ users:
     group:
     - quarantine
     options:
-      name: ItzYoBoySpike
+      name: HunterPlayz210xx
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
     - apocalypse
@@ -16479,7 +16527,7 @@ users:
         - ch.alias.officekill
   8cb79cd3-1e48-4087-9137-a37e164f1494:
     group:
-    - officer
+    - mortal
     options:
       name: Phantom_Jeff
     permissions:
@@ -16821,7 +16869,7 @@ users:
       name: toyngn007
   959284d5-cd63-46e0-943b-ac846fda3ae4:
     group:
-    - mortal
+    - bluelanternbarryallen
     options:
       name: Sea_Wolf995
   95df890e-60a4-4932-b444-76cbd045b8de:
@@ -16891,7 +16939,7 @@ users:
       name: mattlogo21
   972d3bcd-87bc-4e35-a334-ad792dc8e260:
     group:
-    - percyjackson
+    - zoom
     options:
       name: NINJA_SNIVY
     permissions:
@@ -17102,7 +17150,7 @@ users:
     - multiverse.access.underworld
   9e9401a6-206e-4c2c-b491-430c4d4f4ac4:
     group:
-    - aphrodite
+    - harleyquinn
     options:
       name: Kitshiii
   9ee4fc53-8262-4619-bfe9-ba9cfe9a40b2:
@@ -17372,7 +17420,7 @@ users:
       name: grimreaper0202
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - mortal
+    - officer
     options:
       name: nightghost2
     permissions:
@@ -17398,7 +17446,7 @@ users:
       name: Operation_Gaming
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - infinitysilversurfer
+    - blacklanternmartianmanhunter
     options:
       name: MrFlameYT
     permissions:
@@ -17551,7 +17599,7 @@ users:
       name: OMGitzAlyssa_
   abe08db6-0315-4655-b398-e684cd0b042a:
     group:
-    - blackflash
+    - blackracerwilliewalker
     options:
       name: max_nico
     permissions:
@@ -18073,7 +18121,7 @@ users:
       name: wolve15
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - maui
+    - onepunchman
     options:
       name: mintwhip
     permissions:
@@ -18247,7 +18295,7 @@ users:
       name: Slendergirl207
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - groot
+    - blacklanterndeathstormraymondrusch
     options:
       name: v_frankenstein
     permissions:
@@ -18950,10 +18998,14 @@ users:
       name: matyou11
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     group:
-    - mewtwo
+    - mortal
     options:
       name: Minestock451
-    permissions: []
+    permissions:
+    - is.married
+    worlds:
+      fightclub:
+        permissions: []
   d0c73b87-339e-40bc-b6ed-3960f11bb11e:
     options:
       name: MikeJMR
@@ -19368,7 +19420,7 @@ users:
         permissions: []
   dd6004fe-0541-4028-8b29-1f1b1896a68a:
     group:
-    - supergirl
+    - mortal
     options:
       name: iiTzMeKKCupcake
     worlds:
@@ -19435,6 +19487,7 @@ users:
     options:
       name: RedSkies_
     permissions:
+    - is.married
     - multiverse.access.underworld
     worlds:
       fightclub:
@@ -19617,7 +19670,7 @@ users:
       name: wilbur2004
   e34aa979-063b-43d7-bf18-c1214ef10607:
     group:
-    - mortal
+    - goku
     options:
       name: Lightning_Lion1
     worlds:
@@ -19758,7 +19811,7 @@ users:
       name: Cyborg987
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - rocketraccoon
+    - venom
     options:
       name: Predamorph1519
     permissions:
@@ -19778,10 +19831,11 @@ users:
         permissions: []
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - sergeant
+    - mortal
     options:
       name: WhatAreThose05
     permissions:
+    - is.married
     - ch.alias.onduty
     - is.sergeant
     worlds:
@@ -20197,7 +20251,7 @@ users:
       name: CaPiTaInE_FuSiOn
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
     group:
-    - darkseid
+    - blackflash
     options:
       name: superiorxman
     permissions:
@@ -20435,10 +20489,11 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - mortal
+    - dormammu
     options:
       name: mythguy1226
     permissions:
+    - is.married
     - essentials.warps.office
     - essentials.warps.officeadmin
     - -ch.alias.gc
@@ -20841,10 +20896,13 @@ users:
       name: Zak_The_Bat_Man
   fdfb5188-c3d0-4af1-8785-e4c87c8f6ee1:
     group:
-    - mortal
+    - blackracerwilliewalker
     options:
       name: BretherKhalid
     permissions: []
+    worlds:
+      greenfield:
+        permissions: []
   fe057171-b22d-4319-b76d-47878608a64e:
     group:
     - goku
@@ -20954,7 +21012,8 @@ users:
     worlds:
       fightclub:
         permissions: []
-    permissions: []
+    permissions:
+    - chat.cooldown
   reverseflash:
     worlds:
       survival:
@@ -20995,7 +21054,7 @@ users:
       name: OutlawOpossum68
   5da26092-c807-4c9b-8d08-9523f74ddc97:
     group:
-    - martianmanhunter
+    - mortal
     options:
       name: Masterable
     worlds:
@@ -21103,7 +21162,7 @@ users:
       name: paddy_wack
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group:
-    - vibe
+    - mortal
     options:
       name: MaurekSareye
     worlds:
@@ -21167,7 +21226,7 @@ users:
       name: TheAvatarBoy
   f15b523a-14e6-4f59-b040-4d5e254130f6:
     group:
-    - martianmanhunter
+    - blackracerwilliewalker
     options:
       name: BTLteamTNT_2
     worlds:
@@ -21244,7 +21303,7 @@ users:
     permissions: []
   aba5a53e-a89a-4f89-8ef4-a060280938d9:
     group:
-    - onepunchman
+    - mortal
     options:
       name: Da0zone
     worlds:
@@ -21262,7 +21321,7 @@ users:
     permissions: []
   2e5c8055-e83b-455c-9b76-11583724131e:
     group:
-    - godspeed
+    - mortal
     options:
       name: Blue_XI
   a4815368-9ace-4953-8999-f41b8a03f39a:
@@ -21273,7 +21332,7 @@ users:
     options:
       name: SPORTYBOYS
     group:
-    - maui
+    - martianmanhunter
   f623605a-7c45-409a-8d9a-abd04d0b15e8:
     group:
     - greenlanternhaljordan
@@ -21286,9 +21345,15 @@ users:
       name: bigfluffygurilla
   08272c04-f3f4-4aa7-97e3-4baa839ee73b:
     group:
-    - spidermanmilesmorales
+    - greenlanternhaljordan
     options:
       name: LeganZ
+    worlds:
+      fightclub:
+        permissions: []
+      greenfield:
+        permissions: []
+    permissions: []
   c6f85ba6-8efc-4b47-b01e-d79176882987:
     group:
     - antman
@@ -21340,7 +21405,7 @@ users:
       name: NErinaceus
   8dca3152-e202-4b25-b723-fde11d9e54ca:
     group:
-    - antman
+    - onepunchman
     options:
       name: SandSaber
     worlds:
@@ -21349,7 +21414,7 @@ users:
     permissions: []
   fc23b712-7329-48b0-97db-0684bdc60963:
     group:
-    - onepunchman
+    - vegeta
     options:
       name: austik46
     worlds:
@@ -21378,7 +21443,7 @@ users:
       name: JackMortonGamer
   691f8839-a4ac-4671-8301-78c0230ebc1f:
     group:
-    - godspeed
+    - beastboy
     worlds:
       greenfield:
         permissions: []
@@ -21425,7 +21490,7 @@ users:
     permissions: []
   92e64b7e-0f59-4801-bf97-2814af914c1c:
     group:
-    - thehumantorch
+    - martianmanhunter
     worlds:
       greenfield:
         permissions: []
@@ -21434,7 +21499,123 @@ users:
       name: FreakyFrickle
   e869685f-2cba-49be-ba1a-38cdeb6294b0:
     group:
-    - blackracerwilliewalker
+    - agentvenom
+    options:
+      name: Destocraft
+  b13e9018-6456-4027-919b-95f611fe09d5:
+    group:
+    - warmachine
+    options:
+      name: vMatch
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
+  d0b4cc75-dd49-4b5d-ab4f-dcba7ef582d2:
+    group:
+    - agentvenom
+    options:
+      name: sobeysal8
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
+  35a20868-917c-44c7-a4b5-557af7fb7b77:
+    group:
+    - missmartian
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - is.married
+    options:
+      name: KatimariYo
+  05696957-018e-4b7b-aced-68dfa88ea074:
+    group:
+    - deadpool
+    options:
+      name: Lambsauce_Gaming
+  0816af09-eddb-42c6-82a8-e44525989d51:
+    group:
+    - speedy
+    options:
+      name: CaptainM09
+  341b3251-a12d-424f-bdda-44510a0530aa:
+    group:
+    - timewraith
+    options:
+      name: Minekidzz
+  xsparkz:
+    group:
+    - policechief
+  9f6dbca4-3ae7-4bb4-9623-317ce7601497:
+    group:
+    - blackspiderman
+    options:
+      name: FishyJr4Life
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
+  e09a4b95-cc70-4d4a-8eae-0b2e2770f41e:
+    group:
+    - mrmxyzptlk
+    options:
+      name: Pain_Tendo
+  1fdc7e84-3792-4fe6-8037-582a4e97640d:
+    group:
+    - acceleratedman
+    options:
+      name: darknightmare77
+  a01aa627-dd8b-4bd4-867c-7f5d2a4b6b5a:
+    group:
+    - flashbarryallen
+    options:
+      name: EnlitendUmbreon
+  95c5bc87-b13c-401d-8c2e-44a06c8eddf5:
+    group:
+    - raven
+    options:
+      name: baraashforever
+  7257d45d-02cf-4f17-b543-744ecc275765:
+    group:
+    - redhood
+    options:
+      name: VaraxThief
+    worlds:
+      greenfield:
+        permissions: []
+      fightclub:
+        permissions: []
+    permissions: []
+  ac02a39e-8f06-48ea-b606-df61c8a5a9a1:
+    group:
+    - superman
+    options:
+      name: BillyTheRebel
+  d580391b-e650-4af7-a521-886f6afda656:
+    group:
+    - nightwing
+    options:
+      name: xXDiamondwingXx
+  543d24a2-0a3e-4a4c-a5a3-99e3d6efa413:
+    group:
+    - flashwallywest
+    options:
+      name: 321frederick123
+  d3ae4890-8fe6-4e68-9164-9e3a0b1103e6:
+    group:
+    - vegeta
+    options:
+      name: ScizorTheBoy
+  0a2d8eaf-eacf-41aa-8051-3bcab9de76d3:
+    group:
+    - agentvenom
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: DarkLight08
 worlds:
   checkers:
     inheritance:
