--- a/WorldGuard/worlds/policeoffice/regions.yml
+++ b/WorldGuard/worlds/policeoffice/regions.yml
@@ -49,6 +49,24 @@ regions:
         owners: {}
         type: cuboid
         priority: 1
+    offices:
+        parent: police
+        min: {x: -42.0, y: 80.0, z: 18.0}
+        max: {x: -14.0, y: 82.0, z: 40.0}
+        members: {}
+        flags: {build: allow, game-mode: CREATIVE, build-group: MEMBERS, interact: allow,
+            interact-group: MEMBERS, game-mode-group: MEMBERS, pvp: allow}
+        owners: {}
+        type: cuboid
+        priority: 1
+    officehall:
+        min: {x: -42.0, y: 80.0, z: 25.0}
+        max: {x: -11.0, y: 82.0, z: 34.0}
+        members: {}
+        flags: {build: deny, game-mode: SURVIVAL, interact: allow, pvp: allow}
+        owners: {}
+        type: cuboid
+        priority: 2
     pistons:
         members: {}
         flags: {block-break: allow, block-place-group: MEMBERS, pistons: allow, block-place: allow,
@@ -58,8 +76,7 @@ regions:
         priority: 1
     sergeants:
         members:
-            unique-ids: [c8b88131-52d4-4af0-9593-ddcdb3d56058, ca7e8de8-30f0-43c5-9701-982c10ea9459,
-                e6de8cf0-af45-44e4-882f-d98446f4b31b]
+            unique-ids: [ca7e8de8-30f0-43c5-9701-982c10ea9459, e6de8cf0-af45-44e4-882f-d98446f4b31b]
         flags: {}
         owners: {}
         type: global
@@ -75,10 +92,10 @@ regions:
     police:
         members:
             unique-ids: [66edaf7d-94e7-44cf-9d99-34d3ad90594e, 0130299a-4489-429d-b4eb-68643a4c6ac8,
-                c8b88131-52d4-4af0-9593-ddcdb3d56058, ca7e8de8-30f0-43c5-9701-982c10ea9459,
-                a8185de3-b053-4aca-9eb6-d98728e476ad, 8cb79cd3-1e48-4087-9137-a37e164f1494,
-                28556dea-667d-409f-b2ff-fb4177a20ff2, 869b4227-b51e-452e-adbd-48759a6848dd,
-                9025e96a-d286-47b0-a709-98d2a4ee42db, e6de8cf0-af45-44e4-882f-d98446f4b31b]
+                ca7e8de8-30f0-43c5-9701-982c10ea9459, a8185de3-b053-4aca-9eb6-d98728e476ad,
+                8cb79cd3-1e48-4087-9137-a37e164f1494, 28556dea-667d-409f-b2ff-fb4177a20ff2,
+                869b4227-b51e-452e-adbd-48759a6848dd, 9025e96a-d286-47b0-a709-98d2a4ee42db,
+                e6de8cf0-af45-44e4-882f-d98446f4b31b]
         flags: {}
         owners: {}
         type: global
@@ -184,12 +201,12 @@ regions:
         members: {}
         flags:
             vine-growth: deny
-            build: allow
-            game-mode: CREATIVE
+            build: deny
+            game-mode: SURVIVAL
             blocked-cmds: [/thru]
-            build-group: MEMBERS
+            build-group: NON_MEMBERS
             interact: allow
-            game-mode-group: MEMBERS
+            game-mode-group: NON_MEMBERS
             pvp: allow
         owners: {}
         type: global
