--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1,19 +1,19 @@
 v2-logout:
   474707f7-f8b4-43ea-8978-9cae17917e82:
     group: default
-    world: survival
+    world: greenfield
   7d8daa50-d197-41eb-9681-f20b863f9d8a:
     group: default
     world: survival
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
-    world: newminigamehub
-    group: newminigamehub
-  ca7e8de8-30f0-43c5-9701-982c10ea9459:
     world: greenfield
     group: default
-  deb20342-389e-4b5f-808f-24bd22d88aa4:
+  ca7e8de8-30f0-43c5-9701-982c10ea9459:
     world: policeoffice
     group: policeoffice
+  deb20342-389e-4b5f-808f-24bd22d88aa4:
+    world: greenfield
+    group: default
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group: spawn
     world: spawn
@@ -21,8 +21,8 @@ v2-logout:
     group: default
     world: survival
   dd6004fe-0541-4028-8b29-1f1b1896a68a:
-    group: policeoffice
-    world: policeoffice
+    group: overvoid
+    world: overvoid
   4cacf414-5136-4a31-853d-6b0e18edba16:
     group: default
     world: greenfield
@@ -48,7 +48,7 @@ v2-logout:
     group: default
     world: survival_nether
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: greenfield
+    world: survival
     group: default
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
@@ -81,16 +81,16 @@ v2-logout:
     group: default
     world: greenfield
   8cb79cd3-1e48-4087-9137-a37e164f1494:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: office
-    group: office
+    world: spleeflobby
+    group: spleeflobby
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
-    world: survival
+    world: greenfield
     group: default
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     world: greenfield
@@ -124,7 +124,7 @@ v2-logout:
     world: greenfield
   748c7d68-79e5-4194-9bc8-e446d948ee8a:
     group: default
-    world: greenfield
+    world: survival
   7c4c0984-39f8-42e9-84a3-f3997af0fef1:
     group: default
     world: greenfield
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
     world: survival
@@ -180,8 +180,8 @@ v2-logout:
     group: spleeflobby
     world: spleeflobby
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    group: spawn
-    world: spawn
+    group: default
+    world: survival
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group: default
     world: greenfield
@@ -201,8 +201,8 @@ v2-logout:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: policeoffice
-    group: policeoffice
+    world: greenfield
+    group: default
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -234,14 +234,14 @@ v2-logout:
     group: default
     world: infinitycity
   f9e418bf-9c4f-47af-a963-310bff20bc36:
-    world: spleeflobby
-    group: spleeflobby
+    world: fightclub
+    group: fightclub
   387eaafa-0b1b-469a-b393-2cbdd8ed8f9d:
     world: greenfield
     group: default
   76bacf6b-5dbb-498e-b4fb-9435b5a4e22d:
     group: default
-    world: survival
+    world: survival_the_end
   a0939087-dbe1-487d-babe-ef788f59c83c:
     group: default
     world: greenfield
@@ -364,7 +364,7 @@ v2-logout:
     world: survival
   abe08db6-0315-4655-b398-e684cd0b042a:
     group: default
-    world: greenfield
+    world: survival
   264a5bcf-81f7-4851-8032-94af69428015:
     group: default
     world: greenfield
@@ -381,8 +381,8 @@ v2-logout:
     group: default
     world: greenfield
   04c0eb6c-bfc8-4925-b12d-c7940a44f274:
-    group: office
-    world: office
+    group: default
+    world: greenfield
   55118abc-1c66-4987-90cb-d923ab99b820:
     group: default
     world: greenfield
@@ -402,8 +402,8 @@ v2-logout:
     group: default
     world: greenfield
   a8185de3-b053-4aca-9eb6-d98728e476ad:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   03bd377c-eb0d-4e84-b733-e27fd9a954b1:
     group: default
     world: greenfield
@@ -463,7 +463,7 @@ v2-logout:
     world: plots
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group: default
-    world: greenfield
+    world: survival
   9d377ef9-97f1-4f4f-bfec-964323713cbe:
     group: default
     world: survival
@@ -621,8 +621,8 @@ v2-logout:
     group: default
     world: survival
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
-    world: escaperoom
-    group: escaperoom
+    world: greenfield
+    group: default
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: default
     world: survival
@@ -828,8 +828,8 @@ v2-logout:
     group: default
     world: greenfield
   5bfa6299-b245-454e-a31c-22090f6fc812:
-    group: crossfire
-    world: crossfire
+    group: default
+    world: survival
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group: default
     world: greenfield
@@ -850,7 +850,7 @@ v2-logout:
     world: spawn
   0a5357e9-2f1e-4fc6-87cc-dc03d592bd20:
     group: default
-    world: survival
+    world: greenfield
   86e8be95-04cd-483b-a51a-c6d52e71190d:
     group: default
     world: greenfield
@@ -927,7 +927,7 @@ v2-logout:
     world: greenfield
   9fc07ed0-f3b2-43dd-a6a6-477ae3325d68:
     group: default
-    world: greenfield
+    world: infinitycity
   e34aa979-063b-43d7-bf18-c1214ef10607:
     group: default
     world: greenfield
@@ -1328,8 +1328,8 @@ v2-logout:
     group: flappybirdparkour
     world: flappybirdparkour
   fcdfd171-9ff6-4200-8c06-f7f333f6d503:
-    group: default
-    world: survival
+    group: newminigamehub
+    world: newminigamehub
   8ea23287-138d-4d83-b21d-d0ea50e2918f:
     group: default
     world: greenfield
@@ -1418,8 +1418,8 @@ v2-logout:
     group: default
     world: greenfield
   febb0bd1-73e6-4ade-81a3-e754719548da:
-    group: elytrahard
-    world: elytrahard
+    group: plots
+    world: plots
   936c75c3-c857-4d66-9d4c-a8644cbca3fc:
     group: spleef
     world: spleef
@@ -1461,7 +1461,7 @@ v2-logout:
     world: greenfield
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group: default
-    world: infinitycity
+    world: greenfield
   ee058ad1-15d2-48df-bfe2-0dab4c8326f9:
     group: default
     world: greenfield
@@ -1500,7 +1500,7 @@ v2-logout:
     world: greenfield
   f15b523a-14e6-4f59-b040-4d5e254130f6:
     group: default
-    world: infinitycity
+    world: greenfield
   a913250d-8b67-4d1e-9e77-d74405c76872:
     group: default
     world: greenfield
@@ -1586,14 +1586,14 @@ v2-logout:
     group: default
     world: greenfield
   2e5c8055-e83b-455c-9b76-11583724131e:
-    group: deathrun
-    world: deathrun
+    group: default
+    world: greenfield
   3ac58706-accc-4712-939e-4fd8f16cdbb1:
     group: default
     world: greenfield
   a4815368-9ace-4953-8999-f41b8a03f39a:
     group: default
-    world: greenfield
+    world: infinitycity
   f623605a-7c45-409a-8d9a-abd04d0b15e8:
     group: default
     world: greenfield
@@ -1601,8 +1601,8 @@ v2-logout:
     group: default
     world: greenfield
   08272c04-f3f4-4aa7-97e3-4baa839ee73b:
-    group: default
-    world: greenfield
+    group: policeoffice
+    world: policeoffice
   931eabb1-2277-4977-a6dc-1159ff2216c2:
     group: default
     world: greenfield
@@ -1691,8 +1691,8 @@ v2-logout:
     group: default
     world: survival
   9e9401a6-206e-4c2c-b491-430c4d4f4ac4:
-    group: escaperoom
-    world: escaperoom
+    group: default
+    world: greenfield
   10cac297-3d8d-43f9-8ee9-1c3891d2a936:
     group: default
     world: survival
@@ -1704,7 +1704,7 @@ v2-logout:
     world: greenfield
   05696957-018e-4b7b-aced-68dfa88ea074:
     group: default
-    world: greenfield
+    world: survival
   9a30add0-fdf0-4c2d-b272-c42e837a67c7:
     group: default
     world: greenfield
@@ -1712,5 +1712,80 @@ v2-logout:
     group: default
     world: greenfield
   e869685f-2cba-49be-ba1a-38cdeb6294b0:
+    group: default
+    world: greenfield
+  d0b4cc75-dd49-4b5d-ab4f-dcba7ef582d2:
+    group: default
+    world: greenfield
+  b13e9018-6456-4027-919b-95f611fe09d5:
+    group: policeoffice
+    world: policeoffice
+  0e8755a0-2cc9-4409-a6d7-2e61697cafa4:
+    group: default
+    world: greenfield
+  5b6a811d-adea-4925-871d-c6c71bbf1e2a:
+    group: default
+    world: greenfield
+  0816af09-eddb-42c6-82a8-e44525989d51:
+    group: default
+    world: survival
+  9f6dbca4-3ae7-4bb4-9623-317ce7601497:
+    group: default
+    world: greenfield
+  1fdc7e84-3792-4fe6-8037-582a4e97640d:
+    group: default
+    world: survival
+  35a20868-917c-44c7-a4b5-557af7fb7b77:
+    group: default
+    world: greenfield
+  e09a4b95-cc70-4d4a-8eae-0b2e2770f41e:
+    group: default
+    world: greenfield
+  a01aa627-dd8b-4bd4-867c-7f5d2a4b6b5a:
+    group: default
+    world: survival
+  341b3251-a12d-424f-bdda-44510a0530aa:
+    group: default
+    world: greenfield
+  95c5bc87-b13c-401d-8c2e-44a06c8eddf5:
+    group: spawn
+    world: spawn
+  ac02a39e-8f06-48ea-b606-df61c8a5a9a1:
+    group: default
+    world: greenfield
+  7257d45d-02cf-4f17-b543-744ecc275765:
+    group: default
+    world: greenfield
+  227c5be9-f52d-451b-b48c-124dd8ea48ba:
+    group: default
+    world: greenfield
+  94a6e59a-0237-42b9-b484-bbc48efe3644:
+    group: deathrun
+    world: deathrun
+  fcf5c08a-062c-4729-a087-0acde5466f2b:
+    group: default
+    world: greenfield
+  f8175b80-2a1c-4295-b612-18e645c2e62f:
+    group: spawn
+    world: spawn
+  7ade80e9-47a6-41c0-b5a8-9738e22cf11b:
+    group: default
+    world: greenfield
+  fe8653c6-d562-4797-9a5e-b564aac98431:
+    group: default
+    world: greenfield
+  543d24a2-0a3e-4a4c-a5a3-99e3d6efa413:
+    group: default
+    world: greenfield
+  d3ae4890-8fe6-4e68-9164-9e3a0b1103e6:
+    group: default
+    world: survival
+  fdfb5188-c3d0-4af1-8785-e4c87c8f6ee1:
+    group: default
+    world: greenfield
+  d580391b-e650-4af7-a521-886f6afda656:
+    group: default
+    world: greenfield
+  0a2d8eaf-eacf-41aa-8051-3bcab9de76d3:
     group: default
     world: greenfield
