--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3528,8 +3528,8 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&9D&d.&1v&9a'
-      suffix: '&9'
+      prefix: '&bJi&dn&0x'
+      suffix: '&b'
     worlds:
       survival:
         permissions:
@@ -6613,6 +6613,7 @@ groups:
       prefix: '&f&lMortal'
       suffix: '&f'
     permissions:
+    - tournament.*
     - multiverse.access.policeoffice_nether
     - chatcontrol.bypass.dupe.chat
     - multiverse.access.freezetag
@@ -11823,7 +11824,8 @@ users:
     - boros
     options:
       name: Miner_Myles
-    permissions: []
+    permissions:
+    - multiverse.access.policeoffice
     worlds:
       greenfield:
         permissions: []
@@ -12032,7 +12034,7 @@ users:
       name: SmudgeDoodle
   14583bba-da31-48ef-97e0-0043479ed159:
     group:
-    - infinitythanos
+    - flashbartallen
     options:
       name: Pogonip
     permissions: []
@@ -12802,13 +12804,13 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - toothless
+    - missmartian
     options:
       name: X_FoodMeatHark_X
+      prefix: ''
     permissions:
-    - is.officer
-    - ch.alias.onduty
-    - change.chat
+    - tournament.create
+    - multiverse.access.policeoffice
     worlds:
       LostInGalaxeh_:
         permissions: []
@@ -13210,7 +13212,7 @@ users:
     permissions: []
   3419f049-aecb-4494-8a4d-a1452fd143ca:
     group:
-    - mortal
+    - vision
     options:
       name: Real_Flash
     permissions:
@@ -13417,7 +13419,7 @@ users:
       name: Made2Build25
   3a930020-e9c4-4d5b-b5f4-27f8d1c21cbd:
     group:
-    - undyne
+    - indigotribeindigo1
     options:
       name: IanAloveslegos
   3ab6a84f-42d2-4745-a508-5dc6a371d804:
@@ -13916,7 +13918,7 @@ users:
       name: Blaziken1234567
   474707f7-f8b4-43ea-8978-9cae17917e82:
     group:
-    - beerus
+    - blacklightning
     options:
       name: ThatCraftLife
     permissions:
@@ -14085,7 +14087,7 @@ users:
     permissions: []
   4bf9ce90-127c-4d8a-93a5-12c31808061f:
     group:
-    - martianmanhunter
+    - baronmordo
     options:
       name: teamwsmf
     worlds:
@@ -15018,7 +15020,7 @@ users:
       name: Blaze_pvp
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - kidflashwallywest
+    - flashwallywest
     options:
       name: NinjagoGamer_MCU
     permissions:
@@ -15132,7 +15134,7 @@ users:
     permissions: []
   695c4d78-22c5-40e4-b0d4-286ab17c02cf:
     group:
-    - beerus
+    - godspeed
     options:
       name: _GodSpeedCW_
     worlds:
@@ -15272,7 +15274,7 @@ users:
       name: saskue101
   6bb16267-016b-49f7-858d-b28ec860eaf1:
     group:
-    - superman
+    - antman
     options:
       name: MaskedPsycho1337
   6c28fd40-c02c-496c-9503-702ef6ffc7f9:
@@ -15540,10 +15542,11 @@ users:
         permissions: []
   749cb576-020a-4350-852c-99e8185874f9:
     group:
-    - goku
+    - blackracerwilliewalker
     options:
       name: dibs1205
     permissions:
+    - multiverse.access.policeoffice
     - is.married
     - chat.cooldown
     worlds:
@@ -16378,6 +16381,7 @@ users:
       prefix: ''
       suffix: ''
     permissions:
+    - tournament.create
     - -arrest.onjoin
     - -is.criminal
     - -powers.pointandclicklightning
@@ -16716,6 +16720,7 @@ users:
     options:
       name: TonyBongos
     permissions:
+    - multiverse.access.policeoffice
     - is.officer
     - ch.alias.onduty
     - multiverse.access.underworld
@@ -17177,7 +17182,7 @@ users:
     - multiverse.access.underworld
   9e9401a6-206e-4c2c-b491-430c4d4f4ac4:
     group:
-    - aphrodite
+    - harleyquinn
     options:
       name: Kitshiii
     worlds:
@@ -18153,10 +18158,11 @@ users:
       name: wolve15
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - onepunchman
+    - ghostriderjohnnyblaze
     options:
       name: mintwhip
     permissions:
+    - multiverse.access.policeoffice
     - multiverse.access.underworld
     worlds:
       greenfield:
@@ -18327,7 +18333,7 @@ users:
       name: Slendergirl207
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - mrmxyzptlk
+    - doctormanhattan
     options:
       name: v_frankenstein
     permissions:
@@ -19366,15 +19372,12 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - mortal
+    - fanficdbb47887bfbd40e6bfec3d1053ea3aff
     options:
       name: WWE_AlexaBliss
       prefix: ''
     permissions:
     - chat.cooldown
-    - mortal.machine
-    - machine.mortal
-    - change.chat
     - -essentials.msg
     - is.secretary
     - essentials.warps.office
@@ -19519,10 +19522,11 @@ users:
       name: TheProGamer0303
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     group:
-    - mortal
+    - superman
     options:
       name: RedSkies_
     permissions:
+    - multiverse.access.policeoffice
     - is.married
     - multiverse.access.underworld
     worlds:
@@ -19847,7 +19851,7 @@ users:
       name: Cyborg987
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - venom
+    - rocketraccoon
     options:
       name: Predamorph1519
     permissions:
@@ -20147,10 +20151,11 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - thor
+    - jinx
     options:
       name: ___Entity_303___
-    permissions: []
+    permissions:
+    - chat.cooldown
     worlds:
       greenfield:
         permissions: []
@@ -20850,7 +20855,7 @@ users:
       name: Gummiefruitrollz
   fc407fff-19fa-4001-a919-4ed757d3fbb3:
     group:
-    - mortal
+    - bobafett
     options:
       name: De_Archer
     permissions:
@@ -20934,7 +20939,7 @@ users:
       name: Zak_The_Bat_Man
   fdfb5188-c3d0-4af1-8785-e4c87c8f6ee1:
     group:
-    - mortal
+    - harrypotter
     options:
       name: BretherKhalid
     permissions: []
@@ -20980,7 +20985,7 @@ users:
       name: MissSavage27
   febb0bd1-73e6-4ade-81a3-e754719548da:
     group:
-    - gohan
+    - beerus
     options:
       name: TheHeroOfTime23
       prefix: ''
@@ -21098,7 +21103,8 @@ users:
     worlds:
       greenfield:
         permissions: []
-    permissions: []
+    permissions:
+    - multiverse.access.policeoffice
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
     group:
     - firestormraymondstein
@@ -21200,7 +21206,7 @@ users:
       name: paddy_wack
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group:
-    - vibe
+    - criminal
     options:
       name: MaurekSareye
     worlds:
@@ -21332,13 +21338,14 @@ users:
       name: SchwiftyBlu
   ff0fec80-b8d2-4d10-8951-3061c6e7181d:
     group:
-    - supergirl
+    - artemis
     options:
       name: Ultimate_Gamer00
     worlds:
       greenfield:
         permissions: []
-    permissions: []
+    permissions:
+    - multiverse.access.policeoffice
   aba5a53e-a89a-4f89-8ef4-a060280938d9:
     group:
     - mortal
@@ -21399,7 +21406,7 @@ users:
       name: Flame_Man1
   d79d7127-0730-452f-8a13-a2e1efce03ab:
     group:
-    - savitar
+    - onepunchman
     worlds:
       greenfield:
         permissions: []
@@ -21637,7 +21644,7 @@ users:
       name: BillyTheRebel
   d580391b-e650-4af7-a521-886f6afda656:
     group:
-    - greenarrow
+    - bluelanternbarryallen
     options:
       name: xXDiamondwingXx
     worlds:
@@ -21659,7 +21666,7 @@ users:
     permissions: []
   0a2d8eaf-eacf-41aa-8051-3bcab9de76d3:
     group:
-    - kidflashwallywest
+    - agentvenom
     worlds:
       greenfield:
         permissions: []
@@ -21752,6 +21759,7 @@ users:
         permissions: []
     options:
       name: JoyfulPenguinL
+    permissions: []
   b24b3034-5c5e-4b2a-9756-84f1620cf5bc:
     group:
     - beerus
@@ -21793,7 +21801,7 @@ users:
       name: _Flash_CW_
   f4b1d7aa-5980-497b-84c3-11fb45b48bf5:
     group:
-    - redhood
+    - blackflash
     options:
       name: The_Green_Wolf
     worlds:
