--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1,7 +1,7 @@
 v2-logout:
   474707f7-f8b4-43ea-8978-9cae17917e82:
-    group: default
-    world: greenfield
+    group: spleeflobby
+    world: spleeflobby
   7d8daa50-d197-41eb-9681-f20b863f9d8a:
     group: default
     world: survival
@@ -12,8 +12,8 @@ v2-logout:
     world: spawn
     group: spawn
   deb20342-389e-4b5f-808f-24bd22d88aa4:
-    world: policeoffice
-    group: policeoffice
+    world: survival
+    group: default
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group: spawn
     world: spawn
@@ -48,14 +48,14 @@ v2-logout:
     group: default
     world: survival
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: greenfield
+    world: survival
     group: default
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    group: plots
-    world: plots
+    group: default
+    world: survival
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: office
     world: office
@@ -66,8 +66,8 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: plots
-    group: plots
+    world: survival
+    group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
     world: crossfire
@@ -87,8 +87,8 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: greenfield
-    group: default
+    world: spleeflobby
+    group: spleeflobby
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: policeoffice
     group: policeoffice
@@ -96,8 +96,8 @@ v2-logout:
     world: greenfield
     group: default
   869b4227-b51e-452e-adbd-48759a6848dd:
-    world: policeoffice
-    group: policeoffice
+    world: spawn
+    group: spawn
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: overvoid
     group: overvoid
@@ -180,8 +180,8 @@ v2-logout:
     group: spleeflobby
     world: spleeflobby
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    group: default
-    world: survival
+    group: plots
+    world: plots
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group: default
     world: greenfield
@@ -190,7 +190,7 @@ v2-logout:
     world: greenfield
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group: default
-    world: survival
+    world: greenfield
   2db62a35-6065-4c2c-964d-efc5e0ace18a:
     group: default
     world: greenfield
@@ -343,7 +343,7 @@ v2-logout:
     world: greenfield
   4bf9ce90-127c-4d8a-93a5-12c31808061f:
     group: default
-    world: survival
+    world: survival_nether
   8c9c4ce1-27f6-48d3-a764-8755b790f351:
     group: office
     world: office
@@ -370,7 +370,7 @@ v2-logout:
     world: greenfield
   fc407fff-19fa-4001-a919-4ed757d3fbb3:
     group: default
-    world: survival
+    world: survival_nether
   be4d9e29-2dd5-4ea1-8d74-5d47dc45ff73:
     group: default
     world: greenfield
@@ -408,8 +408,8 @@ v2-logout:
     group: default
     world: greenfield
   6a510157-fe98-4e65-a964-24f44460f27c:
-    group: newminigamehub
-    world: newminigamehub
+    group: elytrahard
+    world: elytrahard
   1209d482-8690-4496-bc14-0f0dc1f3514a:
     group: default
     world: greenfield
@@ -463,7 +463,7 @@ v2-logout:
     world: plots
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group: default
-    world: greenfield
+    world: survival
   9d377ef9-97f1-4f4f-bfec-964323713cbe:
     group: default
     world: survival
@@ -621,7 +621,7 @@ v2-logout:
     group: default
     world: survival
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
-    world: survival
+    world: greenfield
     group: default
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: default
@@ -780,8 +780,8 @@ v2-logout:
     group: default
     world: greenfield
   6bb16267-016b-49f7-858d-b28ec860eaf1:
-    group: default
-    world: greenfield
+    group: spawn
+    world: spawn
   40eecf60-9509-4262-bf54-7278851a7b8a:
     group: default
     world: survival
@@ -1241,8 +1241,8 @@ v2-logout:
     group: default
     world: greenfield
   749cb576-020a-4350-852c-99e8185874f9:
-    group: default
-    world: greenfield
+    group: spleef
+    world: spleef
   235bd3b1-a3ee-443d-8b73-25744405a672:
     group: default
     world: greenfield
@@ -1419,7 +1419,7 @@ v2-logout:
     world: greenfield
   febb0bd1-73e6-4ade-81a3-e754719548da:
     group: default
-    world: greenfield
+    world: survival
   936c75c3-c857-4d66-9d4c-a8644cbca3fc:
     group: spleef
     world: spleef
@@ -1568,11 +1568,11 @@ v2-logout:
     group: default
     world: greenfield
   695c4d78-22c5-40e4-b0d4-286ab17c02cf:
-    group: speedforce
-    world: speedforce
-  ff0fec80-b8d2-4d10-8951-3061c6e7181d:
     group: default
     world: greenfield
+  ff0fec80-b8d2-4d10-8951-3061c6e7181d:
+    group: default
+    world: survival
   aba5a53e-a89a-4f89-8ef4-a060280938d9:
     group: default
     world: greenfield
@@ -1691,8 +1691,8 @@ v2-logout:
     group: default
     world: survival
   9e9401a6-206e-4c2c-b491-430c4d4f4ac4:
-    group: default
-    world: greenfield
+    group: spleef
+    world: spleef
   10cac297-3d8d-43f9-8ee9-1c3891d2a936:
     group: default
     world: survival
@@ -1859,8 +1859,8 @@ v2-logout:
     group: default
     world: survival
   4163968c-61ac-4855-8422-657825b5b2ee:
-    group: default
-    world: greenfield
+    group: policeoffice
+    world: policeoffice
   f6913dbc-3fe6-4ed7-8414-5425d9a598ba:
     group: colosseum
     world: colosseum
@@ -1887,10 +1887,10 @@ v2-logout:
     world: speedforce
   77d4cc3f-5108-42bb-ae7c-03cfa5d4b72e:
     group: default
-    world: greenfield
+    world: survival_the_end
   f4b1d7aa-5980-497b-84c3-11fb45b48bf5:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   6628b356-9bd9-4727-86b8-5e3f6020d391:
     group: default
     world: greenfield
@@ -1904,5 +1904,11 @@ v2-logout:
     group: default
     world: greenfield
   2855a0a4-26d1-42c8-b044-637a249ebe3c:
+    group: default
+    world: greenfield
+  3a930020-e9c4-4d5b-b5f4-27f8d1c21cbd:
+    group: default
+    world: survival
+  bcb75803-9189-4561-81af-dbe1fdb46263:
     group: default
     world: greenfield
