--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1431,7 +1431,8 @@ groups:
     worlds:
       survival:
         permissions:
-        - -essentials.protect.damage.fall
+        -essentials.protect.damage.fall
+        - essentials.lightning
         - ch.alias.blacklightning
         - ch.alias.dismountplayer
         - ch.alias.carryplayer
